--- a/app/src/main/res/layout/list_element.xml
+++ b/app/src/main/res/layout/list_element.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="8dp">
+    android:padding="8dp"
+    android:minHeight="60dp">
 
     <TextView
         android:layout_width="wrap_content"
