--- a/app/src/main/res/layout/list_element.xml
+++ b/app/src/main/res/layout/list_element.xml
@@ -7,15 +7,22 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/itemText"
-        android:layout_weight="1" />
+        android:text="New msgid"
+        android:id="@+id/itemMsgId"
+        android:layout_weight="0" />
 
-    <Button
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/itemButton"
+        android:text="New msg"
+        android:id="@+id/itemMsg"
+        android:layout_weight="1" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New ts"
+        android:id="@+id/itemTs"
         android:layout_weight="0" />
 
 </LinearLayout>
