--- a/app/src/main/res/layout/list_element.xml
+++ b/app/src/main/res/layout/list_element.xml
@@ -1,28 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="8dp"
-    android:minHeight="60dp">
-
-    <TextView
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/tableLayout1"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:paddingTop="15dp"
+    android:paddingBottom="15dp">
+    <!-- 2 columns -->
+    <TableRow
+        android:id="@+id/tableRow1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New msg"
-        android:id="@+id/itemMsg"
-        android:layout_weight="1" />
-    <View
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        />
+        android:padding="5dip" >
 
-    <TextView
-        android:layout_width="wrap_content"
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New msg"
+            android:id="@+id/itemMsg"
+            android:layout_weight="1" />
+
+
+    </TableRow>
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="New ts"
-        android:id="@+id/itemTs"
-        android:layout_weight="0"
-        android:layout_marginLeft="40dp" />
+        android:padding="5dip"
+        android:layout_marginTop="10dp">
 
-</LinearLayout>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Newts"
+                android:id="@+id/itemTs"
+                android:layout_weight="1"
+                android:layout_alignParentLeft="true"
+                />
+        <ImageView
+            android:src="@drawable/circle"
+            android:id="@+id/itemCircle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            />
+    </RelativeLayout>
+
+</TableLayout>
